--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "vue": "^2.5.17",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.5.10",
     "vuex": "^3.0.1"
   },
   "description": "TodoMVC for the RealWorld™",
