Implement User Create & Update and Weekly Report

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-loader": "^15.7.0",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.1",
     "vue-simpleform": "^0.0.13",
     "vuetify": "^1.5.10",
